rework + TU for RegexUtils to test the filter with wildcard